# fuggle

./: Makefile  README.md  Untitled.ipynb  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst
fuggle/: __init__.py  _engine_factory.py  _setup.py  _utils.py  execution_engine.py  outputters.py  workflow.py
fuggle_examples/: Untitled.ipynb  setup.ipynb
scripts/: add_avro_jar.sh
tests/: test_execution_engine.py  test_outputters.py  test_utils.py
tests/data/: customer.sqlite
