[metadata]
description-file = README.md

[tool:pytest]
addopts =
  --cov=fuggle
  --cov-report=term-missing:skip-covered
  -vvv

[coverage:run]
omit =
  fuggle/_setup.py
  fuggle/_engine_factory.py

[flake8]
ignore = E24,E203,W503
max-line-length = 88
format = pylint
exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,tests/*,docs/*
max-complexity = 10
